syntax = "proto3";

package com.lanjiu.pro.groupStorage;
import "google/protobuf/any.proto";

option optimize_for = SPEED;
option java_package = "com.lanjiu.pro.groupStorage";
option java_outer_classname = "MessageGroupStorageProto";
option java_multiple_files = true;

service MessageGroupStorageService{

    rpc saveGroupMassage(GroupMsgOffLineRequest) returns (ResponseResult) {};

    rpc saveGroupMembersOffLineMsg(GroupMsgOffLineRequest) returns (ResponseResult) {};

    rpc deleteGroupMembersOffLineMsg(DeleteGroupMembersMsgRequest) returns (ResponseResult) {};

    rpc selectOffLineGroupMsgCount(SelectOffLineGroupMsgRequest) returns (ResponseCount) {};

    rpc deleteSendOffLineMsg(DeleteGroupMembersMsgRequest) returns (ResponseResult) {};

    rpc selectOffLineGroupMsg(SelectOffLineGroupMsgRequest) returns (ResponseResult) {};

    rpc deleteGroupMsg(GroupMsgOffLineRequest) returns (ResponseResult)  {};

    rpc groupOwnerExit(DeleteGroupMembersMsgRequest) returns (ResponseResult)  {};

    rpc groupAudioAndVideoCall(GroupAudioVideoCallRequest) returns (GroupAudioVideoCallResponse){};

}

// 删除群成员离线消息请求协议
message DeleteGroupMembersMsgRequest {
  string user_id = 1;
  string member_type = 2;
  repeated string group_id = 3;
}

// 查询用户离线消息请求协议
message SelectOffLineGroupMsgRequest {
  string user_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

// 接口响应
message ResponseResult {
  bool success = 1;
  string msg = 2;
  google.protobuf.Any data = 3;
}

// 接口响应
message ResponseCount {
  int32 count = 1;
}

message GroupMsg{
   int32 msg_id = 1;
}

message GroupMsgList {
   repeated GroupOfflineMessage group_msg = 1;
}

message GroupMsgOffLineRequest {
    string msg_id = 1;
    int32 msg_type = 2;
    string from_id = 3;
    string group_id = 4;
    string to_id = 5;
    string content = 6;
    string entity_url = 7;
    // 阅后即焚
    bool snapchat_status = 8;
    // 阅后即焚时长
    int32 snapchat_time_length = 9;
    int64 create_time = 10;
    int32 id = 11;
    int32 isAt = 12;
    int64 duration = 13;
    string groupOwner = 14;
    string groupOwnerNick = 15;
    string groupOwnerUrl = 16;
    string groupName = 17;
    string fromMemberId = 18;
    string fromMemberName = 19;
    string fromMemberAvatar = 20;
}

message GroupOfflineMessage {

    int32 offline_message_type = 1;

    string user_id = 2;

    string user_nickname = 3;

    string user_avatar = 4;

    string group_id = 5;

    string group_name = 6;

    string group_member_user_id = 7;

    string group_member_nickname = 8;

    string group_member_avatar = 9;

    ChatMessage chat_message = 10;

    // @成员ID，用","隔开
    string at = 11;

    string msg_from_id = 12;

    // 阅后即焚
    bool snapchat_status = 13;

    // 阅后即焚时长
    int32 snapchat_time_length = 14;
}

// 消息实体
message ChatMessage {
    // 消息ID
    string msg_id = 1;

    // 消息内容类型(图片/视频/文本/语音/文件)
    int32 chat_type = 2;


    // 文本实体
    Text text = 3;

    // 图片实体
    Picture picture = 4;

    // 视频实体
    Video video = 5;

    // 语音实体
    Voice voice = 6;

    // 文件实体
    File file = 7;

}

// 图片结构体
message Picture {
    // 原图下载URL
    string url = 1;

    // 缩略图
    bytes thumbnail = 2;

    // 当前坐标
    int64 pos = 3;

    // 当前文件内容大小
    int64 length = 4;
}

// 视频结构体
message Video {
    // 原视频下载URL
    string url = 1;

    // 缩略图
    bytes thumbnail = 3;

    // 当前坐标
    int64 pos = 4;

    // 当前文件内容大小
    int64 length = 5;
}

// 语音结构体
message Voice {
    // 语音
    bytes content = 1;

    // 当前坐标
    int64 pos = 2;

    // 当前文件内容大小
    int64 length = 3;
}

// 文本结构体
message Text {
    // 文本内容
    string content = 1;

    // 文本长度
    string length = 2;
}

// 文件结构体
message File {
    // 原文件下载URL
    string url = 1;

    // 当前坐标
    int64 pos = 2;

    // 当前文件内容大小
    int64 length = 3;
}

// 搜索条件结构体（防止以后加条件，直接设置实体）
message Search {
    // 搜索条件
    string keyword = 1;
}



message GroupAudioVideoCallRequest{
    GroupAudioVideoMessage groupAudioVideoMessage =1;
    string  args =2;
}

message GroupAudioVideoCallResponse{
    repeated GroupAudioVideoMessage groupAudioVideoMessage =1;
    string result =2;
}

message GroupAudioVideoMessage{
    // 房间ID
    string room_id = 1;

    // 是否纯音频(false:视频；true:音频)
    bool only_audio = 2;

    // 音视频通话发起者
    // 用户ID
    string from_user_id = 3;

    // 用户名称
    string from_user_name = 4;

    // 用户头像
    string user_avatar =5;

    // 群ID
    string group_id = 6;

    // 群被邀请者ID(以英文,隔开)
    string call_member_ids = 7;

    // 类型(create:创建(拨打)，connecting:接通，join:加入，leave:离开，close:关闭(挂断)，busy:忙音，unanswered:未接听)
    string type = 8;

    // 时间
    string detail = 9;

    //备注
    string other =10;

}